# trackflow

./: .env.prod.example  .gitignore  CHANGELOG.md  PRD_Lean_Internal.md  RELEASE_CHECKLIST.md  SDD_Lean_Internal.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/skills/linear-plane-design-system/: SKILL.md
.github/workflows/: release.yml
apps/backend/: Dockerfile  TrackFlow_API.postman_collection.json  drizzle.config.ts  package.json  scratch-auth-test.ts  scratch-check.ts  scratch-documents-test.ts  scratch-query-issue.ts  scratch-query-notifications.ts  scratch-request.ts  scratch-sessions.ts  scratch-signin-test.ts  seed.ts
apps/backend/src/: app.controller.ts  app.module.ts  main.ts
apps/backend/src/db/: drizzle.provider.ts
apps/backend/src/gateways/: realtime.gateway.ts
apps/backend/src/scheduled/: retention-cleanup.job.ts
apps/backend/test/: admin.e2e-spec.ts  app.e2e-spec.ts  issues.e2e-spec.ts  jest-e2e.json  projects.e2e-spec.ts  realtime.e2e-spec.ts  reports.e2e-spec.ts  time-tracking.e2e-spec.ts  timesheets.e2e-spec.ts  users.e2e-spec.ts
apps/desktop/: .gitignore  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: Dashboard.tsx  Login.tsx  ScreenshotPreview.tsx  ScreenshotReview.tsx
apps/desktop/src/lib/: api.ts
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: discord-webhook-card.tsx  notification-bell.tsx  profile-modal.tsx  providers.tsx  theme-toggle.tsx
apps/web/src/lib/: admin-service.ts  auth-service.ts  discord-service.ts  documents-service.ts  issues-service.ts  notifications-service.ts  projects-service.ts  reports-service.ts  time-service.ts  (+1 more)
(+142 files in other folders)
