[package]
name = "trackflow-desktop"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trackflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.2", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt", "time", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
xcap = "0.9"
active-win-pos-rs = "0.8.3"
image = { version = "0.25", default-features = false, features = ["webp"] }
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# rdev installs a live CGEventTap on macOS which, under system load, can add
# perceptible latency to scroll/cursor event delivery for every app on the
# system (see the CGEventSourceCounterForEventType-based polling replacement
# in lib.rs). Keep it only for platforms where that isn't a concern.
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = { git = "https://github.com/rustdesk-org/rdev" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-graphics = { version = "0.3", features = ["CGEventSource", "CGEventTypes"] }

[features]
macos-private-api = ["tauri/macos-private-api"]


